product count on start page

--- a/src/lib/i18n/de.json
+++ b/src/lib/i18n/de.json
@@ -37,7 +37,7 @@
     "stats": {
       "title": "Geschäftsübersicht",
       "products": "Produkte",
-      "salesToday": "Verkäufe heute",
+      "salesToday": "Tagesumsatz",
       "transactions": "Transaktionen"
     },
     "gettingStarted": {
