added stats for total sales

--- a/src/lib/i18n/de.json
+++ b/src/lib/i18n/de.json
@@ -38,6 +38,7 @@
       "title": "Geschäftsübersicht",
       "products": "Produkte",
       "salesToday": "Tagesumsatz",
+      "salesTotal": "Gesamtumsatz",
       "transactions": "Transaktionen"
     },
     "gettingStarted": {
