--- a/src/lib/i18n/en.json
+++ b/src/lib/i18n/en.json
@@ -38,6 +38,7 @@
       "title": "Store Overview",
       "products": "Products",
       "salesToday": "Sales Today",
+      "salesTotal": "Total Sales",
       "transactions": "Transactions"
     },
     "gettingStarted": {
